@@ -1,6 +1,8 @@
 PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 ?? ??? 2004, PHP 5 Release Candidate 1
+- Fixed start-up problem if both SPL and SimpleXML were enabled. The double
+  initialization of apache 1.3 was causing problems here. (Marcus, Derick)
 
 12 Feb 2004, PHP 5 Beta 4
 - Changed exceptions so that they must now inherit from the built-in Exception
